# py32-data

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  d  d.ps1  peripheral_version.md
.github/workflows/: build.yml  nightly.yml
data/: README.md
data/af/: PY32F002B.yaml  PY32F030.yaml  PY32F07X.yaml  PY32F403.yaml
data/chips/: PY32F002A.yaml  PY32F002AA15.yaml  PY32F002AA15M6.yaml  PY32F002AA15N6.yaml  PY32F002AF15.yaml  PY32F002AF15P6.yaml  PY32F002AF15U6.yaml  PY32F002AL15.yaml  PY32F002AL15S6.yaml  PY32F002AW15.yaml  PY32F002AW15S6.yaml  PY32F002AW15U6.yaml  PY32F002Ax15.yaml  PY32F002B.yaml  PY32F002BD15.yaml  PY32F002BD15S6.yaml  PY32F002BF15.yaml  PY32F002BF15P6.yaml  PY32F002BF15U6.yaml  PY32F002BW15.yaml  PY32F002BW15S6.yaml  (+193 more)
py32-data-gen/: Cargo.toml
py32-data-macros/: Cargo.toml
py32-data-serde/: Cargo.toml
py32-metapac-gen/: Cargo.toml
py32-metapac-gen/res/: Cargo.toml  README.md  build.rs
py32-metapac-gen/res/src/: lib.rs  metadata.rs
raw/: py32f002b_series.csv  py32f030_series.csv  py32f07x_series.csv  py32f403_series.csv
scripts/: extract_all_series.py  extract_die.py  extract_series.py
svd/: PY32E407xx.svd  PY32F001Cxx.svd  PY32F001xx.svd  PY32F002Bxx.svd  PY32F002Cxx.svd  PY32F002Xxx.svd  PY32F002Zxx.svd  PY32F021xx.svd  PY32F031xx.svd  PY32F032xx.svd  PY32F040Cxx.svd  PY32F040EPxx.svd  PY32F040Exx.svd  PY32F040xx.svd  PY32F071Cxx.svd  PY32F071Exx.svd  PY32F071xx.svd  PY32F072Cxx.svd  PY32F072Exx.svd  PY32F072xx.svd  PY32F303xx.svd  PY32F403xx.svd  PY32L020xx.svd  PY32M010xx.svd  PY32M030xx.svd  PY32M070xx.svd  PY32T020xx.svd
(+130 files in other folders)
